--- a/教程版/myapp/src/Components/css/tabControl.css
+++ b/教程版/myapp/src/Components/css/tabControl.css
@@ -1,1 +1,28 @@
-*{margin:0;padding:0;box-sizing:border-box}li{list-style:none}.todobar{position:fixed;bottom:0px;left:0px;line-height:50px;height:50px;width:100%;border-top:2px solid #ccc;background-color:#fff}.todobar ul{display:flex}.todobar ul li{text-align:center;flex:1}.active{color:red}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+li {
+  list-style: none;
+}
+.todobar {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  line-height: 50px;
+  height: 50px;
+  width: 100%;
+  border-top: 2px solid #ccc;
+  background-color: #fff;
+}
+.todobar ul {
+  display: flex;
+}
+.todobar ul li {
+  text-align: center;
+  flex: 1;
+}
+.active {
+  color: red;
+}
